# stocks

./: .gitignore  .gitignore~  README.rst  config.py  installmlpy.sh  pip_upgrade.py  requirements.txt  stocks_db.py
StockDB++/: CMakeLists.txt  README.rst  cmake.sh  database.cfg
StockDB++/include/: financialDataSource.h  historicalQuote.h  stockDB.h  stockDatabase.h  stockExceptions.h  yahooFDS.h
StockDB++/src/: CMakeLists.txt  StockDatabase.cpp  main.cpp  yahooFDS.cpp
analysis/: indicators.py  predictor.py
data/: __init__.py  datafeed.py  dataset.py  fred.py  utilities.py
database/: NYSE.txt  __init__.py  config.py  database.py  economicindicators.py  indicators.py  models.py
quant/: .coverage  __init__.py  account.py  analysis.py  tests.py
sources/: config.py  fred.py  googlefinance.py  netfonds.py  yahoofinance.py
stocksdb/: .models.py.swp  AMEX.txt  NASDAQ.txt  __init__.py  database.py  datafeed.py  indicators.py  models.py  quotes.py  stocksdb.py  ystockquote.py
trading/: account.py  actions.py  algorithm.py  backtest.py  simulator.py  tests.py  utilities.py
